# Personal-Knowledge-Base-RAG-Pessoal-

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py
src/core/: __init__.py  config.py  embeddings.py  hybrid_search.py  llm.py  reranker.py  retriever.py  vectorstore.py
src/ingestors/: __init__.py  base.py  markdown.py  pdf.py  web.py
src/interface/: __init__.py  cli.py  streamlit_app.py  visualizations.py
src/utils/: __init__.py  chunking.py  citations.py
tests/: __init__.py
